Add district info to CSD

--- a/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
+++ b/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
@@ -91,6 +91,9 @@ In the year 1987, Daman and Diu was split off from Goa and in 2000 three new sta
 The details of this process are [covered further in a separate document](Changes_States_And_State_Codes_Over_Time.md).
 The 1999 survey (NSS round 55) started in July 1999 and ended in June 2000 and is the last to use the old state definitions. Thus, surveys before 1993 have 31 distinct state codes, surveys between 1993 and 1999 have 32 distinct state codes, while surveys from 2004 have under `subnatid1`.
 
+### Coding of districts
+
+For years where district information is available in the raw data (all EUS years bar 1983 and 1993), the information is coded as per the code in the data and the name in the supporting documentation. We cannot track changes of districts (as is done with `subnatid1prev`) nor ensure consistency of the naming (e.g., a change from Madras District to Chennai District or even Gauhati to Guwahati).
 
 ### Definitions of employment over recall periods
 
