--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -74,6 +74,12 @@ The state codes in the 2021 PLFS capture the following changes:
 
 For the full list of the historical state code changes from both the PLFS and the EUS, refer to this [document](utilities/IND_State_Code_Changes_2021.xlsx). To map updated state codes with previous codes, refer to this [table](utilities/IND_State_Correspondence_2021.csv), which identifies the codes used for each state in every PLFS and EUS survey round.
 
+### Coding of districts
+
+For years where district information is available in the raw data (all EUS years bar 1983 and 1993), the information is coded as per the code in the data and the name in the supporting documentation. We cannot track changes of districts (as is done with `subnatid1prev`) nor ensure consistency of the naming (e.g., a change from Madras District to Chennai District or even Gauhati to Guwahati).
+
+For PLFS, there is no information shared on district codes and names since 2017. The 2017 data is used for 2018. There is a change in district lists in 2019. For 2019 to 2020 a district list from the 2019 time use survey was used ([available here](utilities/State_District_List_from_2019_TUS.pdf), downloaded [here]( https://microdata.gov.in/nada43/index.php/catalog/170)). From 2021 only the codes are recorded for the district information.
+
 ### Reading in data
 
 The data from the PLFS is shared in text format and not as a `.dta` or `.csv` The particular details are [covered further in a separate document](Reading_in_PLFS_data.md).
