--- a/Support/B - Country Survey Details/BRA/PNADC/1. Introduction to PNADC.md
+++ b/Support/B - Country Survey Details/BRA/PNADC/1. Introduction to PNADC.md
@@ -26,10 +26,11 @@ The Brazilian PNAD is a labour force survey collecting information on demographi
 | 2018 | 151979       | 452654        | 207853293              |
 | 2019 | 150667       | 443790        | 209496463              |
 | 2020 | 122793       | 355436        | 211096453              |
+| 2022 | 132587       | 376821        | 213965070              |
 
 ## Where can the data be found?
 
-The microdata are free and publicly available on the Brazilian Institute of Geography and Statistics (IBGE) [download website]( https://www.ibge.gov.br/estatisticas/downloads-estatisticas.html). The section where it can be found is called ‘Trabalho e Rendimento’ (Employment and Income).
+The microdata are free and publicly available on the Brazilian Institute of Geography and Statistics (IBGE) [download website](https://www.ibge.gov.br/estatisticas/sociais/trabalho/2511-np-pnad-continua/30980-pnadc-divulgacao-pnadc4.html?=&t=downloads). The section where it can be found is, in the drop down nested logic called *Anual/Microdados/Visita*. As stated below, due to Covid19 visit 1 is used for all years bar 2020, when visit 5 was used.
 
 Additionally, many instructions on downloading and understanding PNADC idiosyncrasies can be found on [PUC – Datazoom](http://www.econ.puc-rio.br/datazoom/english/pnadc.html).
 
@@ -55,22 +56,19 @@ On the 17th of March 2020, the survey switched from an in-person survey to a [su
 
 Additionally, the CoVid-19 pandemic has impacted the questionnaire design. From the second quarter of 2020, the variable *Usually earned income* had as reference period the pre-pandemic months.
 
+Lastly, annual data as coded here uses the first visit data of each year. There is no first visit data for 2020 and 2021. The 2022 data restarts the series of annual visit 1 data. The 2020 data uses visit 5.
+
 ### Differences in methodology with respect to the PNADC
 
 PNADC replaced the Brazilian National Household Sample Survey (PNAD). The questionnaires are similar, although with some differences. PNADC is collected quarterly, surveying the same household for five rounds. There is an annual edition, both for first and fifth rounds of the survey.
 
-Another important difference is related to the years of study. The National Constitution of 1988 determined the universalization of the right to basic, compulsory and free education, initially from seven to seventeen years old. In 1996, this right was expanded to 6 years old – although in the early years it was not universally observed –, with enrollment at this age taking place in the so-called “literacy grade”, which was not considered a year of study by the IBGE. However, in 2006, compulsory elementary education was established to last 9 years, starting at 6 years of age, incorporating, in practice, the “literacy grade”. The PNADC, therefore, starts to consider this first year as a year of study.
+Another important difference is related to the years of study. The National Constitution of 1988 determined the universalization of the right to basic, compulsory and free education, initially from seven to seventeen years old. In 1996, this right was expanded to 6 years old – although in the early years it was not universally observed –, with enrolment at this age taking place in the so-called “literacy grade”, which was not considered a year of study by the IBGE. However, in 2006, compulsory elementary education was established to last 9 years, starting at 6 years of age, incorporating, in practice, the “literacy grade”. The PNADC, therefore, starts to consider this first year as a year of study.
 
 The employment definition is more restrictive in PNADC. Since 1992, PNAD classify a worker as employed with no restrictions on the number of hours worked in the week, whereas in PNADC it must have worked at least on hour. Unpaid work in aid of a religious, charitable or cooperative institution was no longer considered employment in PNADC, along with work in production for own consumption or in construction for own use. Finally, in PNADC, some restrictions were introduced regarding the time of leave to consider the person as employed.
 
 ### Coding of industry and occupation codes
 
-The PNADC codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE Domiciliar 2.0). Each of these can be mapped to the international classification (ISCO 2008 and ISIC Rev. 4 respectively) using the first two digits of the national classifications as these match the international ones they are based on.
+The PNADC codes occupation based on the *Classificação de Ocupações para Pesquisas Domiciliares* (COD). This is based on ISCO 2008 bar a few minor changes. In particular codes `6225` and `5168` which do not exist in ISCO-08 are coded to the next highest category (i.e., `6220` and `5160` respectively). Additionally, the structure for military personnel is different. The choice in our coding is to send any cod between `0200` and `0512` to the generic armed forces code `0000`. 
 
-The only differences in the case of CNAE Domiciliar is the recoding of `industry_orig` codes `48010`, `48020`, `48076`, and `48078` to `4600` and any other `industry_orig` code starting with **48** as `4700`. For more details on the CNAE Dom 2.0 used in PNADC [see the corresponding spreadsheet](utilities/CNAE_Domiciliar2.0_DEZEMBRO2008.xls)
+Industry classification is based on CNAE Domiciliar, which is - at two digits - based on ISIC Revision 4. The only differences in the case of CNAE Domiciliar is the recoding of `industry_orig` codes `48010`, `48020`, `48076`, and `48078` to `4600` and any other `industry_orig` code starting with **48** as `4700`. For more details on the CNAE Dom 2.0 used in PNADC [see the corresponding spreadsheet](utilities/CNAE_Domiciliar2.0_DEZEMBRO2008.xls).
 
-Additionally, and exceptionally, another coding of ISCO and ISIC was done. Due to previous work on the PNAD survey a unified coding in line with the 1.0 version of CBO and CNAE used there was done to map to ISCO-88 and ISIC Rev 3.
-
-This means that, in addition to `industrycat_isic` (coded on ISIC Rev 4 as per `isic_version`) and ocup_isco (coded to ISCO 2008 as per `isco version`) as well as their secondary job counterparts there are variables `industrycat_isic_30` and `occup_isco_88` coding information to ISIC Rev 3 and ISCO 1988. To do so, the harmonization builds on [this correspondence file for industry](utilities/Additional%20Data/Ind_Corresp_2010s.dta) and [this correspondence file for occupations](utilities/Additional%20Data/isco_88_cod_DD.dta).
-
-More details on the correspondence to ISCO-88 and ISIC REv 3 can be found [here](../PNAD/Correspondence%20between%20PNAD%20occupation%20classification%20and%20ISCO.md) and [here](../PNAD/Correspondence%20between%20PNAD%20industry%20classification%20and%20ISIC.md) respectively, in the documents for [PNAD](../PNAD/1.%20Introduction%20to%20PNAD.md)
