--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -25,6 +25,7 @@ The PLFS covers household characteristics, individual demographic and education 
 | 2019	    | 100,408		    | 418,297		    |
 | 2020	    | 100,344		    | 410,818		    |
 | 2021	    | 101,782		    | 428,525		    |
+| 2022	    | 101,655		    | 419,512		    |
 
 ## Where can the data be found?
 
@@ -78,7 +79,7 @@ For the full list of the historical state code changes from both the PLFS and th
 
 For years where district information is available in the raw data (all EUS years bar 1983 and 1993), the information is coded as per the code in the data and the name in the supporting documentation. We cannot track changes of districts (as is done with `subnatid1prev`) nor ensure consistency of the naming (e.g., a change from Madras District to Chennai District or even Gauhati to Guwahati).
 
-For PLFS, there is no information shared on district codes and names since 2017. The 2017 data is used for 2018. There is a change in district lists in 2019. For 2019 to 2020 a district list from the 2019 time use survey was used ([available here](utilities/State_District_List_from_2019_TUS.pdf), downloaded [here]( https://microdata.gov.in/nada43/index.php/catalog/170)). From 2021 only the codes are recorded for the district information.
+For PLFS, there is no information shared on district codes and names since 2017. The 2017 data is used for 2018. There is a change in district lists in 2019. For 2019 to 2020 a district list from the 2019 time use survey was used ([available here](utilities/State_District_List_from_2019_TUS.pdf), downloaded [here]( https://microdata.gov.in/nada43/index.php/catalog/170)). From 2021 only the codes are recorded for the district information (i.e., infromation as "36-01" instead of "36-01 - Adilabad").
 
 ### Reading in data
 
