--- a/Support/B - Country Survey Details/BGD/QLFS/1. Introduction to BGD QLFS.md
+++ b/Support/B - Country Survey Details/BGD/QLFS/1. Introduction to BGD QLFS.md
@@ -88,7 +88,7 @@ The Bangladesh QLFS employs its national industry classification system called t
 | 2015-16 | BSIC 2009                | ISIC revision 4         | First 3 digits; first 2 digits if BSIC code non-existent at 3 digits in ISIC Rev 4 |
 | 2016-17 | BSIC 2009                | ISIC revision 4         | First 3 digits; first 2 digits if BSIC code non-existent at 3 digits in ISIC Rev 4 |
 
-As of time of writing (April 2023), an update of the BSIC has been released in 2020 to use more detailed categories of industries. While the ISIC version 4 details occupational categories at four digits, the BSIC 2020 is detailed at six digits. Based on the table below, both BSIC 2020 and BSIC 2009 are comparable at most at the single digit level. BSIC is comparable with the ISIC Rev. 4 at 2 digits except for an additional two-digit code that is not in ISIC, and neither was it reported as an industry of any individual in either survey. 
+As of time of writing (April 2023), an update of the BSIC has been released in 2020 to use more detailed categories of industries. While the ISIC version 4 details industry categories at four digits, the BSIC 2020 is detailed at six digits. Based on the table below, both BSIC 2020 and BSIC 2009 are comparable at most at the single digit level. BSIC is comparable with the ISIC Rev. 4 at 2 digits except for an additional two-digit code that is not in ISIC, and neither was it reported as an industry of any individual in either survey. 
 
 <img src="Utilities/isic-bsic-relationship.png" alt="BGD_divisions" width="600" height="200">
 
