Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -54,7 +54,7 @@ Starting in 2019, the survey adopted a rotation sampling design where 75% of the
 
 ## What is the significance level?
 
-The official reports detail estimates by area of residence (urban or rural), and the regions (GLD variable `subnatid1`) in Mongolia. The [2019 official report]("Utilities/1.%20report_LFS_eng.pdf") also detailed estimates by provinces (GLD variable `subnatid2`), and given similarities in the sampling design, it is possible that the data for the 2020 and 2021 LFS are representative at this level as well. However, it should be noted that the sample size has not increased. Any additional significance at lower level must have come from a more efficient sampling. The GLD team could not verify how this was achieved. 
+The official reports detail estimates by area of residence (urban or rural), and the regions (GLD variable `subnatid1`) in Mongolia. The [2019 official report]("Utilities/1.%20report_LFS_eng.pdf") also detailed estimates by provinces (GLD variable `subnatid2`), and given similarities in the sampling design, it is possible that the data for the 2020, 2021 and 2022 LFS are representative at this level as well. However, it should be noted that the sample size has not increased. Any additional significance at lower level must have come from a more efficient sampling. The GLD team could not verify how this was achieved. 
 
 
 ## Other noteworthy aspects
