--- a/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -1,5 +1,4 @@
-1. Introduction to PHL
-================
+
 
 -   [Introduction to Philippines Labor Force Survey (PHL
     LFS)](#introduction-to-philippines-labor-force-survey-phl-lfs)
@@ -17,7 +16,7 @@
 
 ## What is the PHL LFS?
 
-The Philippines Labor Force Survey (LFS) is a [Labor Force Survey](https://psa.gov.ph/statistics/survey/labor-force/lfs-index) by the [Philippine Statistics Authority](https://psa.gov.ph/) that is usually consists of four rounds per year, updated with a new questionnaire design in 1987 (PSA Technical Note). Our analysis begins in 1997.
+The Philippines Labor Force Survey (LFS) is a [Labor Force Survey](https://psa.gov.ph/statistics/survey/labor-force/lfs-index) by the [Philippine Statistics Authority (PSA)](https://psa.gov.ph/) that is usually consists of four rounds per year, updated with a new questionnaire design in 1987 (PSA Technical Note). Our analysis begins in 1997.
 
 ## What does the PHL LFS cover?
 
@@ -48,6 +47,9 @@ The following table presents unique Household and Individual observations in the
 | 2017 | 164,198           | 720,935            |
 | 2018 | 163,507           | 722,237            |
 | 2019 | 160,309           | 707,022            |
+| 2020 |                 |              |
+| 2021 |                 |              |
+| 2022 | 388,543           |  1,655,205            |
 
 ## Where can the data be found?
 
@@ -63,7 +65,8 @@ A thorough explanation of the general sampling scheme is available from the [Phi
 
 ## What is the significance level?
 
-The primary significance level is the Province or first administrative disaggregation, [see](https://psa.gov.ph/sites/default/files/ISHB%20-%20Labor%20Force%20Series%20No.161%20July%202014.pdf).
+Between 1997 and 2020, the survey is representative at the regional level. The switch to monthly reporting and the increase in sample size made it possible to detail estimates at the province level but only for annual estimates. For example, the map below details the labor force participation rate across Philippine provinces. However, the data we retrieved from the PSA do not include a province variable, so the harmonized datasets can provide detailed estimates at the region level. 
+![Prov_PHL](utilities/prov_map_2021_22.png)
 
 ## Appending quarterly files
 
