--- a/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -65,12 +65,46 @@ A thorough explanation of the general sampling scheme is available from the [Phi
 
 ## What is the significance level?
 
-Between 1997 and 2020, the survey is representative at the regional level. The switch to monthly reporting and the increase in sample size made it possible to detail estimates at the province level but only for annual estimates. For example, the map below details the labor force participation rate across Philippine provinces. However, the data we retrieved from the PSA do not include a province variable, so the harmonized datasets can provide detailed estimates at the region level. 
+Between 1997 and 2020, the survey is representative at the regional level. The switch to monthly reporting and the increase in sample size made it possible to detail estimates at the province level but only for annual estimates. For example, the map below details the labor force participation rate across Philippine provinces. 
+
 ![Prov_PHL](utilities/prov_map_2021_22.png)
 
-## Appending quarterly files
 
-The PHL LFS is released as quarterly data. The GLD does not always have access to all quarters. Reviewing the variable `int_month` will reveal the quarters included (where January stands for Q1, April for Q2, July for Q3, and October for Q4).
+
+Table below summarizes the level of significance by time period:
+
+| Year | Time period | Level of significance |
+|------|--------|------- |
+|1997-2020| Annual | Region |
+|1997-2020| Quarterly | National |
+|2021-2022| Annual | Province |
+|2021-2022| Monthly | National |
+
+However, the data we retrieved from the PSA do not include a province variable, so the harmonized datasets can provide detailed estimates at the region level. 
+
+## Data Collection Frequency
+
+Between 1997 and 2020, the PHL LFS was released as quarterly data. The GLD does not always have access to all quarters. Reviewing the variable `int_month` will reveal the quarters included (where January stands for Q1, April for Q2, July for Q3, and October for Q4).
+
+Beginning 2021, the PHL LFS is released as monthly data but an extended questionnaire is used on the January, April, July and October rounds. The following variables can only be found in these 4 rounds:
+
+| VARNAME | DESCRIPTION |
+|---------|-------------|
+| PUFREG | Region |
+| CURSCH | Currently Attending School |
+| GRADTECH | Graduate of technical/vocational course |
+| NFORMAL | Currently Attending Non-formal Training for Skills Development |
+| ARRANGEMENT | Working Arrangement |
+| PFWRK | First Time to Work |
+| PBASIS | Basis of Payment (Primary Occupation) |
+| PBASIC | Basic Pay per Day (Primary Occupation) |
+| NJOBS | Number of Jobs during the past week |
+| FLWRK | First Time to Look for Work |
+| JOBSM | Job Search Method |
+| WEEKS | Number of Weeks Spent in Looking for Work |
+| LTLOOKW | When Last Looked for Work |
+| WILLING |Willingness to take up work during the past week or within two weeks |
+
 
 Additionally, and more importantly, the raw data obtained does have different variable names for the same questionnaire variables from one quarter to the next. For example, region information is coded in Q1 of 2007 as `w_regn`, while the variable in Q2 of 2007 is `reg`.
 
