--- a/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -86,7 +86,7 @@ However, the data we retrieved from the PSA do not include a province variable, 
 
 Between 1997 and 2020, the PHL LFS was released as quarterly data. The GLD does not always have access to all quarters. Reviewing the variable `int_month` will reveal the quarters included (where January stands for Q1, April for Q2, July for Q3, and October for Q4).
 
-Beginning 2021, the PHL LFS is released as monthly data but an extended questionnaire is used on the January, April, July and October rounds. The following variables can only be found in these 4 rounds:
+Beginning 2021, the PHL LFS is released as monthly data, i.e., it continues the quarterly collection in the January, April, July and October rounds, and uses an abridged questionnaire in the other months. The following variables are collected in the quarterly rounds but not in the monthly rounds:
 
 | VARNAME | DESCRIPTION |
 |---------|-------------|
