--- a/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -77,10 +77,10 @@ Table below summarizes the level of significance by time period:
 |------|--------|------- |
 |1997-2020| Annual | Region |
 |1997-2020| Quarterly | National |
-|2021-2022| Annual | Province |
+|2021-2022| Annual | Province* |
 |2021-2022| Monthly | National |
 
-However, the data we retrieved from the PSA do not include a province variable, so the harmonized datasets can provide detailed estimates at the region level. 
+*However, the data we retrieved from the PSA do not include a province variable, so the harmonized datasets can provide detailed estimates at the region level. 
 
 ## Data Collection Frequency
 
