--- a/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
+++ b/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
@@ -10,15 +10,15 @@
         level?](#what-is-the-significance-level)
     -   [Other noteworthy aspects](#other-noteworthy-aspects)
 
-# Introduction to Tunisia Labor Force Survey (TUN LFS)
+# Introduction to Tunisia (TUN LFS)
 
 ## What is the TUN LFS?
 
-The Tunisia LFS has been conducted by the National Institute of Statistics (NIS) of Tunisia since August 2016. The questionnaire gathers information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, work history and characteristics of the unemployed and household living conditions. 
-The survey started in 1997 as a biannual national survey, transitioned to an annual survey in 2000, and shifted to a quarterly format beginning in the fourth quarter of 2011. 
+The Tunisia Enquête Nationale sur la Population et l’Emploi (ENPE), translated in English as National Survey on Population and Employment, has been conducted by the Tunisia Institut National de la Statistique (INS) since 1997. The frequency of conducting the survey has changed over time. It started an biannual national survey in 1997, became an annual survey in 2000, then transitioned to a quarterly survey beginning the fourth quarter of 2011. 
 
-## What does the TUN LFS cover?
-The Tunisia LFS is a labor force survey with information on demographic characteristics, education, and labor market activities over the past 7 days. The harmonized years and sample sizes used in the GLD harmonization are as follows:
+## What does the TUN ENPE cover?
+The Tunisia ENPE is a labor force survey with information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, work history and characteristics of the unemployed and household living conditions. The harmonized years and sample sizes used in the GLD harmonization are as follows:
+
 | year | persons | households |
 |------|---------|------------|
 | 1997 | 136659  | 26989      |
@@ -30,35 +30,38 @@ The Tunisia LFS is a labor force survey with information on demographic characte
 | 2008 | 616531  | 140917     |
 | 2009 | 660905  | 157756     |
 | 2010 | 548456  | 137878     |
-| 2011 | 163683  | 40102      |
-| 2012 | 497063  | 123802     |
-| 2013 | 472244  | 120341     |
-| 2015 | 486668  | 125891     |
-| 2016 | 478601  | 126287     |
-| 2017 | 452928  | 121217     |
+| 2011 Q2 | 163683  | 40102      |
+| 2012 Q2 | 497063  | 123802     |
+| 2013 Q2 | 472244  | 120341     |
+| 2015 Q2 | 486668  | 125891     |
+| 2016 Q2 | 478601  | 126287     |
+| 2017 Q2 | 452928  | 121217     |
 
 ## Where can the data be found?
-The datasets can be downloaded by the public in the [African Development Bank (AfDB) microdata library] (https://microdata-catalog.afdb.org/index.php/home). Users need to note the following when using these datasets:
--	These variables in these datasets are only a subset of the complete list of possible variables based on the questionnaire. Data on wages were not provided, and key employment information were only available, including labor force status, employment status, and information on occupation, industry and place of work.  
--	Data for 2011 onwards were only available for the second quarter. 
--	A comprehensive dataset is available for 2010 but still lacked data on wages
+The datasets can be downloaded publicly in the [African Development Bank (AfDB) microdata library] (https://microdata-catalog.afdb.org/index.php/home). Users need to note the following when using these datasets:
+-	These variables in these datasets are only a subset of the complete list of possible variables based on the questionnaire. Data on wages were not provided, and key employment information were only available with some variables vary in terms of level of detail over time.
+-	A more comprehensive data is available for 2010 but still lacked data on wages
+-	Data for 2011 onwards are only available for the second quarter. 
 
 ## What is the sampling procedure?
 The Tunisia LFS uses a two-stage sampling design. The first step involves drawing districts with probability proportional to size based on the General Population and Housing Census from a pool of districts stratified by governorates and areas.  The second step involves randomly drawing a cluster containing an average between 15 and 35 households per district. 
 
 ## What is the significance level?
 
-The survey is meant to generate estimates at the regional level. 
+The significance level of the survey varies over time. In 2005 and 2006, the survey is significant at the regional level. Beginning 2007 onwards, the data is significant at the governorate (or state) level, made possible by the increased sample size throughout this period, with the exception of the 2011 survey where the data is significant only at the regional level. We do not have reports between 1997 and 2000, so we cannot determine the significant level of disaggregation. Because of the much lower sample size and to take a conservative stance, we suggest that the estimates are significant at the national level.
 
 ## Other noteworthy aspects
 
-### Definition of concept of economically active
-To classify individuals as economically active, the Tunisia Statistics Office expanded its definition to include both the marginal labor force and potential labor force. 
+### Defining the labor force in the earlier surveys
+In its earlier years, particularly between 1997 and 2001, the Tunisia INS used a different definition to identify the labor force population, which include both the marginal labor force and potential labor force (refer to this document). 
+
 The marginal labor force includes individuals who do not consider themselves as part of the economically active population but have engaged in some form of work in the three months prior to the survey. This group was identified by asking all respondents about their employment status—whether they were employed, unemployed, housewives, students, or in military service. Those who did not identify as economically active (excluding military service) and had worked in the preceding three months were considered marginally active. These individuals were further assessed to determine if they had worked for at least one hour in the week before the survey. Since most reported they were inactive, they were largely classified as unemployed.
+
 The potential labor force is made up of a specific group of housewives who are not entirely occupied with housekeeping tasks, have some available time, and express a willingness to work. These women, after identifying themselves as housewives without engaging in any other work in the past three months, were asked whether their domestic duties occupied their full day. If not, they were further queried on their openness to accepting a job if one became available. Those open to work were shifted from the inactive category to potentially active, with most being counted as unemployed.
 
 ### Household ID
-The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the primary sampling unit and household identifier. 
+The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the governorate or region, and the household identifier. There are special cases where we adopted a different approach to construct the IDs because the governorate/region and household ID do not uniquely identify the individual respondents.
+
 •	IN years [xxxx], roster ID is re-used multiple times for the same household, we re-create the roster ID by sorting the household members.
 •	In years [xxxx], combining governorates and household ID do not identify unique households. We grouped households based on a running sequence of roster ID with the assumption that individuals of the same household are sorted correctly. For example, a sequence of roster ID equal to 1,2,3,4,5 is considered one household;  a sequence of 1,2,3 is another household. For as long as the roster ID does not go back to 1, we group those individual IDs in the same household. 
 
