Update 1. Introduction to TUN ENPE.md

--- a/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
+++ b/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
@@ -14,7 +14,7 @@
 
 ## What is the TUN LFS?
 
-The Tunisia Enquête Nationale sur la Population et l’Emploi (ENPE), translated in English as National Survey on Population and Employment, has been conducted by the Tunisia Institut National de la Statistique (INS) since 1997. The frequency of conducting the survey has changed over time. It started an biannual national survey in 1997, became an annual survey in 2000, then transitioned to a quarterly survey beginning the fourth quarter of 2011. 
+The Tunisia Enquête Nationale sur la Population et l’Emploi (ENPE), translated in English as the National Survey on Population and Employment, has been conducted by the Tunisia Institut National de la Statistique (INS) since 1997. The frequency of conducting the survey has changed over time. It started an biannual national survey in 1997, became an annual survey in 2000, then transitioned to a quarterly survey beginning the fourth quarter of 2011. 
 
 ## What does the TUN ENPE cover?
 The Tunisia ENPE is a labor force survey with information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, work history and characteristics of the unemployed and household living conditions. The harmonized years and sample sizes used in the GLD harmonization are as follows:
@@ -38,7 +38,7 @@ The Tunisia ENPE is a labor force survey with information on household roster ch
 | 2017 Q2 | 452928  | 121217     |
 
 ## Where can the data be found?
-The datasets can be downloaded publicly in the [African Development Bank (AfDB) microdata library] (https://microdata-catalog.afdb.org/index.php/home). Users need to note the following when using these datasets:
+The datasets can be downloaded publicly in the [African Development Bank (AfDB) microdata library](https://microdata-catalog.afdb.org/index.php/home). Users need to note the following when using these datasets:
 -	These variables in these datasets are only a subset of the complete list of possible variables based on the questionnaire. Data on wages were not provided, and key employment information were only available with some variables vary in terms of level of detail over time.
 -	A more comprehensive data is available for 2010 but still lacked data on wages
 -	Data for 2011 onwards are only available for the second quarter. 
@@ -53,17 +53,18 @@ The significance level of the survey varies over time. In 2005 and 2006, the sur
 ## Other noteworthy aspects
 
 ### Defining the labor force in the earlier surveys
-In its earlier years, particularly between 1997 and 2001, the Tunisia INS used a different definition to identify the labor force population, which include both the marginal labor force and potential labor force (refer to this document). 
+In its earlier years, particularly between 1997 and 2001, the Tunisia INS used a different definition to identify the labor force population, which include both the marginal labor force and potential labor force (refer to this document). In the GLD, the labor force population does not include these groups.
 
 The marginal labor force includes individuals who do not consider themselves as part of the economically active population but have engaged in some form of work in the three months prior to the survey. This group was identified by asking all respondents about their employment status—whether they were employed, unemployed, housewives, students, or in military service. Those who did not identify as economically active (excluding military service) and had worked in the preceding three months were considered marginally active. These individuals were further assessed to determine if they had worked for at least one hour in the week before the survey. Since most reported they were inactive, they were largely classified as unemployed.
 
 The potential labor force is made up of a specific group of housewives who are not entirely occupied with housekeeping tasks, have some available time, and express a willingness to work. These women, after identifying themselves as housewives without engaging in any other work in the past three months, were asked whether their domestic duties occupied their full day. If not, they were further queried on their openness to accepting a job if one became available. Those open to work were shifted from the inactive category to potentially active, with most being counted as unemployed.
 
 ### Household ID
-The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the governorate or region, and the household identifier. There are special cases where we adopted a different approach to construct the IDs because the governorate/region and household ID do not uniquely identify the individual respondents.
+The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the governorate or region, and the household identifier. There are special cases where we adopted a different approach to construct the IDs because the governorate/region, household ID and individual ID do not uniquely identify the individual respondents.
 
-•	IN years [xxxx], roster ID is re-used multiple times for the same household, we re-create the roster ID by sorting the household members.
-•	In years [xxxx], combining governorates and household ID do not identify unique households. We grouped households based on a running sequence of roster ID with the assumption that individuals of the same household are sorted correctly. For example, a sequence of roster ID equal to 1,2,3,4,5 is considered one household;  a sequence of 1,2,3 is another household. For as long as the roster ID does not go back to 1, we group those individual IDs in the same household. 
+•	**In 2010**, the individual ID is re-used multiple times for the same household, we re-create the individual ID by sorting the household members by age and sex. 
+
+•	**In 2007, 2008, 2009**, combining governorates and household ID do not identify unique households. We grouped households based on a running sequence of individual ID after sorting the households by governorate, household ID and individual ID. Individuals in a sequence are classified into a single household for as long as a running number does not start back to 1. 
 
 ### Discrepancies between the questionnaire and variables in the raw datasets
 While the Tunisia LFS questionnaire remains largely unchanged over time, there were certain instances when the raw datasets do not contain the universe of variables implied by the questionnaire. These missing variables are detailed [here](Missing%20variables.md).
