Update 1. Introduction to TUN ENPE.md

--- a/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
+++ b/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
@@ -52,6 +52,22 @@ The significance level of the survey varies over time. In 2005 and 2006, the sur
 
 ## Other noteworthy aspects
 
+### Geographic Information
+
+Tunisia is  divided into 24 governorates or provinces grouped into seven geographical regions, which are not formal administrative divisions but are commonly used to describe different parts of the country. The governorates are further subdivided into districts, but the survey does not provide information at this level of detail. 
+
+| subnatid1        | subnatid2                               |
+|------------------|-----------------------------------------|
+| 1 - Central Tunis | Tunis, Ariana, Ben Arous, Manouba      |
+| 2 - North East    | Nabeul, Zaghouan, Bizerte              |
+| 3 - North West    | Beja, Jendouba, Le Kef, Siliana        |
+| 4 - Central East  | Sousse, Monastir, Mahdia, Sfax         |
+| 5 - Central West  | Kairouan, Kasserine, Sidi Bouzide      |
+| 6 - South East    | Gabes, Mednine, Tataouine              |
+| 7 - South West    | Gafsa, Tozeur, Kebili                  |
+
+In 2000, the governorate of Manouba was created after splitting from the governorate of Ariana. This change is immediately reflected in the 2001 survey.
+
 ### Defining the labor force in the earlier surveys
 In its earlier years, particularly between 1997 and 2001, the Tunisia INS used a different definition to identify the labor force population, which include both the marginal labor force and potential labor force (refer to this document). In the GLD, the labor force population does not include these groups.
 
@@ -67,12 +83,11 @@ The datasets received contain ID information. In the GLD project, we have create
 •	**In 2007, 2008, 2009**, combining governorates and household ID do not identify unique households. We grouped households based on a running sequence of individual ID after sorting the households by governorate, household ID and individual ID. Individuals in a sequence are classified into a single household for as long as a running number does not start back to 1. 
 
 ### Discrepancies between the questionnaire and variables in the raw datasets
-While the Tunisia LFS questionnaire remains largely unchanged over time, there were certain instances when the raw datasets do not contain the universe of variables implied by the questionnaire. These missing variables are detailed [here](Missing%20variables.md).
+While the Tunisia ENPE questionnaire remains largely unchanged over time, there were certain instances when the raw datasets do not contain the universe of variables implied by the questionnaire. These recurring variables are detailed [here](Variable_availability.md).
 
 ### Employment: Industry Classification
-The Tunisia LFS uses a two-digit industry code that is not comparable with the ISIC.  
+The Tunisia ENPE uses two-digit industry codes that do not align with the International Standards for Industrial Classification (ISIC). For this reason, we do not code `industrycat_isic`. The precise details are covered in a separate document [here](Industry.md)
 
 ### Employment: Occupation Classification
-The Tunisia LFS follows a customized version of the ISCO 2008 called CISCO (see [here](utilities/TUN_CISCO.pdf)). However, there were codes that cannot be found in both the CISCO and ISCO 2008. The closest digit available was used when coding ISCO correspondence. For example, occupation code "2213" was mapped to "2200" since no valid ISCO code can be found for the 3-digit equivalent, "2210". 
-
+The Tunisia ENPE uses an occupational classification system equal to the International Standards of Classification for Occupation 1988 (ISCO-88) at the first two digits. However, the availability of occupation codes and their level of detail is not consistent over time. The precise details are covered in a separate document [here](Occupation.md)
 
