Update 1. Introduction to TUN ENPE.md

--- a/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
+++ b/Support/B - Country Survey Details/TUN/ENPE/1. Introduction to TUN ENPE.md
@@ -66,14 +66,10 @@ Tunisia is  divided into 24 governorates or provinces grouped into seven geograp
 | 6 - South East    | Gabes, Mednine, Tataouine              |
 | 7 - South West    | Gafsa, Tozeur, Kebili                  |
 
-In 2000, the governorate of Manouba was created after splitting from the governorate of Ariana. This change is immediately reflected in the 2001 survey.
+In 2000, the governorate of Manouba was created after splitting from the governorate of Ariana. This change is immediately reflected in the 2001 survey. 
 
 ### Defining the labor force in the earlier surveys
-In its earlier years, particularly between 1997 and 2001, the Tunisia INS used a different definition to identify the labor force population, which include both the marginal labor force and potential labor force (refer to this document). In the GLD, the labor force population does not include these groups.
-
-The marginal labor force includes individuals who do not consider themselves as part of the economically active population but have engaged in some form of work in the three months prior to the survey. This group was identified by asking all respondents about their employment status—whether they were employed, unemployed, housewives, students, or in military service. Those who did not identify as economically active (excluding military service) and had worked in the preceding three months were considered marginally active. These individuals were further assessed to determine if they had worked for at least one hour in the week before the survey. Since most reported they were inactive, they were largely classified as unemployed.
-
-The potential labor force is made up of a specific group of housewives who are not entirely occupied with housekeeping tasks, have some available time, and express a willingness to work. These women, after identifying themselves as housewives without engaging in any other work in the past three months, were asked whether their domestic duties occupied their full day. If not, they were further queried on their openness to accepting a job if one became available. Those open to work were shifted from the inactive category to potentially active, with most being counted as unemployed.
+In its earlier years, particularly between 1997 and 2001, the Tunisia INS used a different definition to identify the labor force population. The precise details are covered in a separate document [here](Defining%20the%20Labor%20Force.md)
 
 ### Household ID
 The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the governorate or region, and the household identifier. There are special cases where we adopted a different approach to construct the IDs because the governorate/region, household ID and individual ID do not uniquely identify the individual respondents.
